<resources>
    <string name="app_name">Gestoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="repita_password">Repita password</string>
    <string name="email">Email</string>
    <string name="registrar">Registrar</string>
</resources>